<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/startLocationImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintBottom_toBottomOf="@+id/itemDetailsLocation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/itemDetailsLocation"
        app:srcCompat="@drawable/ic_baseline_location_intemediate"
        tools:ignore="VectorDrawableCompat"
        android:contentDescription="@string/location_image" />

    <TextView
        android:id="@+id/itemDetailsLocation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/address"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="@dimen/secondary_text"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toEndOf="@+id/startLocationImage"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/clockImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/itemDetailsTimestamp"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/itemDetailsTimestamp"
        app:srcCompat="@drawable/ic_baseline_clock"
        tools:ignore="VectorDrawableCompat"
        android:contentDescription="@string/clock_image" />

    <TextView
        android:id="@+id/itemDetailsTimestamp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/time"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="@dimen/tertiary_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/clockImage"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.60" />

    <ImageView
        android:id="@+id/southArrowDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/startLocationImage"
        app:layout_constraintStart_toStartOf="@+id/startLocationImage"
        app:layout_constraintTop_toBottomOf="@+id/startLocationImage"
        app:srcCompat="@drawable/ic_baseline_south_24"
        tools:ignore="VectorDrawableCompat"
        android:contentDescription="@string/south_arrow" />

</androidx.constraintlayout.widget.ConstraintLayout>