<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp">

    <ImageView
        android:id="@+id/startLocationImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/addressET_layout"
        app:srcCompat="@drawable/ic_baseline_location_arrival"
        tools:ignore="VectorDrawableCompat"
        android:contentDescription="@string/location_image" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/addressET_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/address"
        app:endIconMode="clear_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/clockGuideline"
        app:layout_constraintStart_toEndOf="@+id/startLocationImage"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addressET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textAutoCorrect|textPersonName|textCapWords|textMultiLine"
            android:lines="2" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/clockGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.55" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/itemEditTimestampET_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/date"
        app:endIconMode="clear_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/imageButton"
        app:layout_constraintStart_toStartOf="@+id/clockGuideline"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/itemEditTimestampET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="false"
            android:gravity="center"
            android:inputType="textAutoCorrect|textPersonName|textCapWords|textMultiLine"
            android:lines="2" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/itemEditTimestampET_layout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.1"
        app:srcCompat="@android:drawable/ic_delete"
        android:contentDescription="@string/delete_item" />

</androidx.constraintlayout.widget.ConstraintLayout>