<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TripDetailsFragment"
    android:background="@color/constraintLayoutBackground">


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/carPhoto"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/carName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/car_photo"
                tools:srcCompat="@drawable/car_photo"
                android:contentDescription="@string/car_photo" />

            <EditText
                android:id="@+id/carName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:text="@string/car_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="@dimen/secondary_text"
                app:layout_constraintBottom_toTopOf="@+id/carGuideline"
                app:layout_constraintEnd_toEndOf="@+id/carPhoto"
                app:layout_constraintStart_toStartOf="@+id/carPhoto"
                android:hint="Car Name"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/carGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.25" />

            <EditText
                android:id="@+id/driverName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/driver_name"
                android:textSize="@dimen/secondary_text"
                app:layout_constraintEnd_toStartOf="@+id/driverRate"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/carGuideline"
                android:hint="Driver Name"/>

            <RatingBar
                android:id="@+id/driverRate"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:numStars="5"
                android:progressTint="@color/ratingBar"
                android:rating="4"
                android:secondaryProgressTint="@color/ratingBar"
                android:stepSize="0.5"
                app:layout_constraintBottom_toBottomOf="@+id/driverName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/driverName"
                tools:targetApi="lollipop" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/driverName" />

            <Button
                android:id="@+id/show_hide"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/show_hide"
                app:layout_constraintEnd_toEndOf="@+id/recyclerView"
                app:layout_constraintStart_toStartOf="@+id/recyclerView"
                app:layout_constraintTop_toBottomOf="@+id/recyclerView"
                app:strokeColor="#4CAF50"
                app:strokeWidth="2dp" />

            <TextView
                android:id="@+id/estimatedDuration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/estimated_duration"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="@dimen/secondary_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/show_hide" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/availableSeatsET_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:hint="Available Seats"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toStartOf="@+id/seatPriceET_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/estimatedDuration">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/availableSeatsET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textAutoCorrect|textPersonName|textCapWords"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/seatPriceET_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:hint="Seat Price"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/availableSeatsET_layout"
                app:layout_constraintTop_toBottomOf="@+id/estimatedDuration">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/seatPriceET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textAutoCorrect|textPersonName|textCapWords"/>

            </com.google.android.material.textfield.TextInputLayout>

            <EditText
                android:id="@+id/tripDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"

                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/trip_description"
                android:textSize="@dimen/secondary_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/seatPriceET_layout"
                android:hint="Trip Description"/>

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="#00FFFFFF"
                android:scaleType="fitCenter"
                android:src="@android:drawable/ic_menu_camera"
                app:layout_constraintBottom_toBottomOf="@+id/carPhoto"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/carPhoto"
                app:layout_constraintTop_toTopOf="@+id/carPhoto" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>